Adding Item and ItemProperties.
Improvements with index.html and REST API / Swagger UI.
